# spatstat-interface

./: .coveragerc  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: main.yml
notebooks/: README.md  spatstat_playground.ipynb
src/spatstat_interface/: interface.py  utils.py
tests/: main.py  test_smoke_install_spatstat.py  test_smoke_spatstat.py  test_spatstat_basic_usage.py
