# Duplicate content from pyproject.toml file to allow editable install
# using pip install -e .
# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html#declarative-config

[metadata]
name = spatstat-interface
version = 0.1.0-alpha.1
url = https://github.com/For-a-few-DPPs-more/spatstat-interface
download_url = https://github.com/For-a-few-DPPs-more/spatstat-interface
project_urls =
    Documentation = https://github.com/For-a-few-DPPs-more/spatstat-interface
    Source = https://github.com/For-a-few-DPPs-more/spatstat-interface
author = Guillaume Gautier
author_email = guillaume.gga@gmail.com
maintainer = Guillaume Gautier
maintainer_email = guillaume.gga@gmail.com
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: R
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: Mathematics
# license =
license_files = file: LICENSE
description = Simple Python interface with the spatstat R package using rpy2
long_description = file: README.md
long_description_content_type = text/markdown
keywords = spatial statistics, point processes, python, R, spatstat
# platforms =
# provides =
# requires =
# obsoletes =


[options]
# zip_safe =
# setup_requires =
install_requires =
    matplotlib>=3.4.2
    numpy>=1.20.3
    pandas>=1.2.4
    rpy2>=3.4.5

# extras_require see [options.extras_require]
python_requires = >=3.8
# entry_points =
# scripts =
# eager_resources =
# dependency_links =
# tests_require =
# include_package_data =
packages = find:
package_dir =
    =src
# namespace_packages =
# py_modules =
# data_files =

[options.packages.find]
where = src
# include =
exclude = tests

[options.extras_require]
# MacOS pip install -e ".[notebook,docs,dev]"
# Windows pip install -e .[notebook,docs,dev]
# Linux idk, one of the two options above
notebook =
    jupyter>=1.0.0
dev =
    pytest>=6.2.4
    pytest-cov>=2.12.1
    pre-commit>=2.15.0
    black>=21.6b0
    isort>=5.9.3

# [options.package_data]

# [options.exclude_package_data
